<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_attendence"
        android:icon="@drawable/ic_attendance"
        android:title="@string/title_attendence" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_marks"
        android:icon="@drawable/ic_marks"
        android:title="@string/title_marks" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_message"
        android:title="@string/title_notifications" />

</menu>
